<resources>
    <string name="app_name">ProjetoDevApps</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="open_drawer">Abrir drawer</string>
    <string name="close_drawer">Fechar drawer</string>
    <string name="str_menu_header_atalhos">Atalhos</string>
    <string name="str_menu_header_informacoes">Informações</string>
    <string name="str_menu_header_configuracoes">Configurações</string>
    <string name="titulo">Lei nº 14.483, de 16 de julho de 2007</string>
    <string name="capitulo">CAPÍTULO II - DAS DOAÇÕES</string>
    <string name="str_sair">Sair</string>
    <string name="str_artigo4">Art. 4º É permitida a realização de eventos de doação de cães e gatos em estabelecimentos devidamente legalizados.\n§ 1º A feira só poderá ser realizada sob a responsabilidade de pessoa física ou jurídica, de direito público ou privado, sem fins lucrativos mantenedoras ou responsáveis por cães e gatos.\n§ 2º Para identificação da entidade, associação, instituição ou pessoa promotora do evento é necessário a existência de uma placa, em local visível, no espaço de realização do evento de doação, contendo: nome do promotor, seja pessoa física ou jurídica, CPF ou CNPJ, com respectivo telefone.\n§ 3º Pet shops ou clínicas veterinárias podem promover doações de animais, desde que haja identificação do responsável pela atividade, no local de exposição dos animais, atendendo-se às exigências previstas no parágrafo anterior.\n§ 4º Os animais expostos para doação devem estar devidamente esterilizados e submetidos a controle de endo e ectoparasitas, bem como submetidos ao esquema de vacinação contra a raiva e doenças espécie-específicas, conforme respectiva faixa etária, mediante atestados.\nArt. 5º As doações serão regidas por contrato específico, cujas obrigações previstas, por escrito, devem contemplar os dados qualificativos do animal, do adotante e do doador, as responsabilidades do adotante, as penalidades no caso de descumprimento, a permissão de monitoramento pelo doador e as condições de bem-estar e manutenção do animal.\nParágrafo único. Antes da consumação da doação e da assinatura do contrato, o potencial adotante deve ser amplamente informado e conscientizado sobre a convivência da família com um animal, noções de comportamento, expectativa de vida, provável porte do animal na fase adulta (no caso de filhotes), necessidades nutricionais e de saúde.\nArt. 6º No ato da doação deve ser providenciado o RGA do animal, em nome do novo proprietário.\nArt. 7º Aqueles elencados no § 1º do art. 4º podem cobrar taxa de adoção do animal, devendo para tanto fornecer ao adotante recibo especificando o valor da taxa e demais gastos.</string>
    <string name="adotar">Adotar</string>
    <string name="ajudar">Ajudar</string>
    <string name="cadastrar">Cadastrar Animal</string>
    <string name="ola">Olá!</string>
    <string name="boas_vindas">Bem vindo ao Meau!\nAqui você pode adotar, doar e ajudar\ncães e gatos com facilidade.\nQual o seu interesse?</string>
    <string name="login">login</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, has id invidunt iracundia. Admodum perfecto pri in, eum quot pericula percipitur cu. Accusam perfecto gloriatur id vis, nec ad soluta gubergren vulputate, malis vitae verterem an qui. Nostro mentitum ne nam, pro quod persius sanctus at, facilisis incorrupte mel ne. Ut usu tantas salutandi, et eum animal ponderum invenire, et putant meliore eam.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sexo">SEXO</string>
    <string name="porte">PORTE</string>
    <string name="idade">IDADE</string>
    <string name="local">LOCALIZAÇÃO</string>
    <string name="castrado">CASTRADO</string>
    <string name="vermifugado">VERMIFUGADO</string>
    <string name="vacinado">VACINADO</string>
    <string name="doencas">DOENÇAS</string>
    <string name="temperamento">TEMPERAMENTO</string>
    <string name="exigencias_doador">EXIGÊNCIAS DO DOADOR</string>
    <string name="info">INFORMAÇÕES ADICIONAIS</string>
    <string name="pret_adotar">PRENTENDO ADOTAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="str_tenho_interesse">Tenho interesse em cadastrar o animal para</string>
    <string name="nome_do_animal">Nome do animal</string>
    <string name="fotos_do_animal">Fotos do animal</string>
    <string name="adicionar_fotos">adicionar fotos</string>
    <string name="str_especie">Espécie</string>
    <string name="str_cachorro">Cachorro</string>
    <string name="str_gato">Gato</string>
    <string name="str_macho">Macho</string>
    <string name="str_femea">Fêmea</string>
    <string name="str_pequeno">Pequeno</string>
    <string name="str_medio">Médio</string>
    <string name="str_grande">Grande</string>
    <string name="str_idoso">Idoso</string>
    <string name="str_adulto">Adulto</string>
    <string name="str_filhote">Filhote</string>
    <string name="str_saude">Saúde</string>
    <string name="str_doencas_do_animal">Doenças do animal</string>
    <string name="str_exigencias_adocao">Exigências para adoção</string>
    <string name="str_termo_de_adocao">Termo de adoção</string>
    <string name="str_fotos_da_casa">Fotos da casa</string>
    <string name="str_visita_previa_ao_animal">Visita prévia ao animal</string>
    <string name="str_acompanhamento_pos_adocao">Acompanhamento pós adoção</string>
    <string name="str_1_mes">1 mês</string>
    <string name="str_3_meses">3 meses</string>
    <string name="str_6_meses">6 meses</string>
    <string name="str_sobre_o_animal">Sobre o animal</string>
    <string name="str_compartilhe_a_historia_do_animal">Compartilhe a história do animal</string>
    <string name="str_brincalhao">Brincalhão</string>
    <string name="str_timido">Tímido</string>
    <string name="str_calmo">Calmo</string>
    <string name="str_guarda">Guarda</string>
    <string name="str_amoroso">Amoroso</string>
    <string name="str_preguicoso">Preguiçoso</string>
    <string name="str_vacinado">Vacinado</string>
    <string name="str_vermifugado">Vermifugado</string>
    <string name="str_castrado">Castrado</string>
    <string name="str_doente">Doente</string>
    <string name="str_termo_de_apadrinhamento">Termo de apadrinhamento</string>
    <string name="str_exigencias_para_apadrinhamento">Exigências para apadrinhamento</string>
    <string name="str_auxilio_financeiro">Auxílio financeiro</string>
    <string name="str_visitas_ao_animal">Visitas ao animal</string>
    <string name="str_objetos">Objetos</string>
    <string name="str_necessidades_do_animal">Necessidades do animal</string>
    <string name="str_alimento">Alimento</string>
    <string name="str_nome_do_medicamento">Nome do medicamento</string>
    <string name="str_especifique_os_objetos">Especifique os objetos</string>
    <string name="str_medicamento">Medicamento</string>
    <string name="str_alimentacao">Alimentação</string>
    <string name="str_adocao">Adoção</string>
    <string name="str_apadrinhar">Apadrinhar</string>
    <string name="str_ajuda">Ajuda</string>
    <string name="str_colocar_para_adocao">Colocar para adoção</string>
    <string name="str_procurar_ajuda">Procurar ajuda</string>
    <string name="str_procurar_padrinho">Procurar padrinho</string>
    <string name="str_eba_confirmacao_cadastro_animal">Eba!</string>
    <string name="str_confirmacao_cadastro_animal">O cadastro do seu pet foi realizado com sucesso!\n\nCertifique-se que permitiu o envio de notificações por push no campo privacidade do menu configurações do aplicativo. Assim, poderemos te avisar assim que alguém interessado entrar em contato!
</string>
    <string name="str_meus_pets">Meus pets</string>
    <string name="cadastrar_usuario">CADASTRAR</string>
    <string name="dica_senha">Digite a senha escolhida</string>
    <string name="dica_email">Digite seu e-mail</string>
    <string name="hitories">HOSTÓRIAS</string>
    <string name="nome">NOME COMPLETO</string>
    <string name="email">EMAIL</string>
    <string name="endereco">ENDEREÇO</string>
    <string name="telefone">TELEFONE</string>
    <string name="username">NOME DE USUÁRIO</string>
    <string name="historico">HISTÓRICO</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="ops">Ops!</string>
    <string name="aviso">Você não pode realizar esta ação sem possuir cadastro.</string>
    <string name="f_cadastro">FAZER CADASTRO</string>
    <string name="p_cadastro">Já possui cadastro?</string>
    <string name="f_login">FAZER LOGIN</string>
    <string name="dica_senha2">Digite a senha</string>
    <string name="interessados">VER INTERESSADOS</string>
    <string name="remover">REMOVER</string>
    <string name="desc_favorite_icon">favorite icon on card</string>
    <string name="desc_animal_photo">image of dog</string>
    <string name="str_notificacoes">Notificações</string>
    <string name="str_ativar_notifica_es_de_chat">Ativar notificações de chat</string>
    <string name="str_ativar_notifica_es_de_eventos">Ativar notificações de eventos</string>
    <string name="str_ativar_notif_recordacao">Ativar notificações de recordação</string>
    <string name="str_aviso_notificacoes_chat">Com as notificações de chat ativadas, você sempre receberá um aviso em seu celular quando alguém entrar em contato através do aplicativo</string>
    <string name="str_aviso_notif_record">Com as notificações de recordação ativadas, você será sempre lembrado de entrar em contato com o doador (caso você adote um animal) a fim de cumprir o requisito de acompanhamento pós adoção</string>
    <string name="str_aviso_notif_eventos">Com as notificações de evento ativadas, você sempre receberá uma notificação para lembrá-lo dos eventos da semana</string>
    <string name="str_salvar_alteracoes">Salvar alterações</string>
    <string name="str_selecione_o_s_animal_is">Selecione o(s) animal(is)</string>
    <string name="str_qual_processo_formalizado">Qual processo foi formalizado?</string>
    <string name="str_apadrinhamento">Apadrinhamento</string>
    <string name="str_selecione_o_usu_rio">Selecione o usuário</string>
    <string name="str_finalizar_processo">Finalizar processo</string>
    <string name="str_seu_interesse">Seu interesse</string>
    <string name="str_pesquisar_por_nome">Pesquisar por nome</string>
    <string name="str_estado">Estado</string>
    <string name="str_cidade">Cidade</string>
    <string name="str_nome_do_pet_ou_usuario">Nome do pet ou usuário</string>
    <string name="str_fazer_pesquisa">Fazer pesquisa</string>
    <string name="str_falha_pesquisa"> Infelizmente, não encontramos nenhum animal com essas características em nosso aplicativo.\n\n
        Mas não desista, pois temos lindos animais cadastrados! Experimente desabilitar e/ou alterar alguns filtros para encontrá-los.</string>
    <string name="str_editar_filtragem">Editar filtragem</string>
    <string name="str_desabilitar_filtros">Desabilitar filtros</string>
    <string name="comportamento">Comportamento</string>
    <string name="alimentacao">Alimentação</string>
    <string name="saude">Saúde</string>
</resources>