<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_tenhoInteresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="8dp"
        android:text="@string/str_tenho_interesse"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btAdocao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/str_adocao"
        android:textOn="@string/str_adocao"
        android:layout_marginLeft="24dp"
        app:layout_constraintStart_toStartOf="@id/tv_tenhoInteresse"
        app:layout_constraintTop_toBottomOf="@id/tv_tenhoInteresse" />


    <ToggleButton
        android:id="@+id/btApadrinhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/str_apadrinhar"
        android:textOn="@string/str_apadrinhar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@id/btAdocao"
        app:layout_constraintStart_toEndOf="@id/btAdocao"
        app:layout_constraintTop_toBottomOf="@id/tv_tenhoInteresse" />

    <ToggleButton
        android:id="@+id/btAjudar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textOn="@string/str_ajuda"
        android:textOff="@string/str_ajuda"
        app:layout_constraintLeft_toLeftOf="@id/btApadrinhar"
        app:layout_constraintStart_toEndOf="@id/btApadrinhar"
        app:layout_constraintTop_toBottomOf="@id/tv_tenhoInteresse" />

    <View
        android:id="@+id/separador"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/btAdocao" />

    <TextView
        android:id="@+id/tvOpcaoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajudar"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/separador"
        app:layout_constraintStart_toStartOf="@id/btAdocao" />

    <TextView
        android:id="@+id/tituloNomeDoAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_yellow_text"
        android:text="@string/nome_do_animal"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tvOpcaoTexto"
        app:layout_constraintStart_toStartOf="@id/tvOpcaoTexto"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nomeDoAnimal"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_animal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/separador"
        app:layout_constraintStart_toStartOf="@id/tituloNomeDoAnimal"
        app:layout_constraintTop_toBottomOf="@id/tituloNomeDoAnimal"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        />

    <TextView
        android:id="@+id/tituloFotosDoAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_yellow_text"
        android:text="@string/fotos_do_animal"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/nomeDoAnimal"
        app:layout_constraintStart_toStartOf="@id/nomeDoAnimal" />


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fotoCardView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/theme_gray_f1"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/tituloFotosDoAnimal"
        app:layout_constraintStart_toStartOf="@id/tituloFotosDoAnimal"
        app:layout_constraintEnd_toEndOf="@id/nomeDoAnimal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_book_black_18dp"
            android:layout_gravity="center_vertical|center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/adicionar_fotos"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fotoCardView"
        app:layout_constraintStart_toStartOf="@id/fotoCardView"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_yellow_text"
            android:text="@string/str_especie"
            android:textAllCaps="true" />
        
        <RadioGroup
            android:id="@+id/radioGroupEspecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/cachorroOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cachorro" />
            <RadioButton
                android:id="@+id/gatoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_gato" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_yellow_text"
            android:text="@string/sexo"
            android:textAllCaps="true" />

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/machoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_macho" />
            <RadioButton
                android:id="@+id/femeaOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_femea" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_yellow_text"
            android:text="@string/porte"
            android:textAllCaps="true" />

        <RadioGroup
            android:id="@+id/radioGroupPorte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/pequenoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_pequeno" />
            <RadioButton
                android:id="@+id/medioOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_medio" />
            <RadioButton
                android:id="@+id/grandeOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_grande" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_yellow_text"
            android:text="@string/idade"
            android:textAllCaps="true" />

        <RadioGroup
            android:id="@+id/radioGroupIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/filhoteOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_filhote" />
            <RadioButton
                android:id="@+id/adultoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_adulto" />
            <RadioButton
                android:id="@+id/idosoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_idoso" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_yellow_text"
            android:text="@string/temperamento"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/brincalhaoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_brincalhao" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/timidoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_timido" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/calmoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_calmo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/guardaOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_guarda" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/amorosoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_amoroso" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/preguicosoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_preguicoso" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_yellow_text"
            android:text="@string/str_saude"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/vacinadoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_vacinado" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/vermifugadoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_vermifugado" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/castradoOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_castrado" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/doenteOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_doente" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etDoencasDoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_doencas_do_animal"
                android:textSize="14sp"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameAlternativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>

        <FrameLayout
            android:id="@+id/segundoFrameAlternativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_yellow_text"
                android:text="@string/str_sobre_o_animal"
                android:textAllCaps="true" />
            <EditText
                android:id="@+id/etSobreOAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_compartilhe_a_historia_do_animal"
                android:textSize="14sp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="@string/str_colocar_para_adocao"
                android:textAllCaps="true" />

        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>